--- a/src/certbot-dns-cloudflare-cname/snap/snapcraft.yaml
+++ b/src/certbot-dns-cloudflare-cname/snap/snapcraft.yaml
@@ -1,14 +1,14 @@
 name: certbot-dns-cloudflare-cname
-base: core20
+base: core24
 summary: Cloudflare DNS Authenticator with CNAME support.
 description: Cloudflare DNS Authenticator plugin for Certbot with support for CNAME aliasing.
 grade: stable
 confinement: strict
 adopt-info: certbot-dns-cloudflare-cname
-architectures:
-  - build-on: amd64
-  - build-on: arm64
-  - build-on: armhf
+platforms:
+  amd64:
+  arm64:
+  armhf:
 
 parts:
   certbot-dns-cloudflare-cname:
@@ -17,8 +17,6 @@ parts:
     override-pull: |
         snapcraftctl pull
         snapcraftctl set-version `grep ^version "${SNAPCRAFT_PART_SRC}/setup.py" | cut -f2 -d= | tr -d "'[:space:]"`
-    build-environment:
-      - SNAP_BUILD: "True"
   certbot-metadata:
     plugin: dump
     source: .
@@ -32,10 +30,11 @@ slots:
     interface: content
     content: certbot-1
     read:
-      - $SNAP/lib/python3.8/site-packages
+      - $SNAP/lib/python3.12/site-packages
 
 plugs:
   certbot-metadata:
     interface: content
     content: metadata-1
     target: $SNAP\certbot-shared
+
